Attempt to fix issue with encoding